--- a/msdscript/Makefile
+++ b/msdscript/Makefile
@@ -1,9 +1,13 @@
 INCS = main.hpp expr.hpp
-OBJS = main.o
+OBJS = main.o expr.o
 msdscript: $(OBJS)
 		c++ --std=c++14 -O2 -o msdscript $(OBJS)
+
 main.o: main.cpp $(INCS)
 		c++ --std=c++14 -O2 -c main.cpp
+
+expr.o:  expr.cpp $(INCS)
+		c++ --std=c++14 -O2 -c expr.cpp
 
 .PHONY : test
 test: msdscript
