uphold test generation

--- a/msdscript/Makefile
+++ b/msdscript/Makefile
@@ -1,7 +1,11 @@
-INCS = main.hpp expr.hpp parse.hpp
-OBJS = main.o expr.o parse.o 
+INCS = main.hpp expr.hpp parse.hpp exec.h
+OBJS = main.o expr.o parse.o
+OBJS1 = exec.o run_msdscript.o
 msdscript: $(OBJS)
 		c++ --std=c++14 -O2 -o msdscript $(OBJS)
+
+test_msdscript: $(OBJS1)
+		c++ --std=c++14 -O2 -o run_msdscript $(OBJS1)
 
 main.o: main.cpp $(INCS)
 		c++ --std=c++14 -O2 -c main.cpp
@@ -12,7 +16,11 @@ expr.o: expr.cpp $(INCS)
 parse.o: parse.cpp $(INCS)
 		c++ --std=c++14 -O2 -c parse.cpp
 
+exec.o: exec.cpp $(INCS)
+		c++ --std=c++14 -O2 -c exec.cpp
 
+run_msdscript.o: run_msdscript.cpp $(INCS)
+		c++ --std=c++14 -O2 -c run_msdscript.cpp
 
 .PHONY : test
 test: msdscript
